# overture-uk

./: .gitignore  README.md  REPRODUCE.md  data.dvc  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
demos/: nepal_demo.ipynb  nepal_demo.qmd
demos/nepal/: nepal_demo.html  nepal_demo.ipynb  nepal_demo.qmd
demos/tesco/: tesco_demo.html  tesco_demo.ipynb  tesco_demo.qmd
paper/: arxiv.qmd  arxiv.tex  overture.bib  supplementary.qmd  supplementary.tex
pipelines/custom/: dvc.yaml  params.yaml
pipelines/uk_full/: dvc.yaml  params.yaml
queries/: uk_admins.sql  uk_buildings.sql  uk_places.sql
src/: clean.py  queries.py  query.py  spatial_attributes.py  uk_postprocessing.py
